<resources>
    <string name="app_name">pm_trab</string>
    <string name="title_activity_add_note">AddNote</string>
    <string name="titulo">Titulo (Required)</string>
    <string name="texto">Texto (Required)</string>
    <string name="btnsave">Guardar</string>
    <string name="btnremove">Remover</string>
    <string name="btnedit">Editar</string>
    <string name="update">Atualizar Nota</string>
    <string name="delete">Apagar tudo</string>
    <string name="preference_file_key" translatable="false">preference_file_key</string>
    <string name="automatic_login_check" translatable="false">automatic_login_check</string>
    <string name="automatic_login_username" translatable="false">automatic_login_username</string>
    <string name="fieldusernameemptylabel">Parameter Username is Empty</string>
    <string name="fieldpasswordemptylabel">Parameter Password is Empty</string>
    <string name="loginincorrectlabel">Login Failed</string>
    <string name="logincorrectlabel">Login Successful</string>
    <string name="markerincorrectlabel">Marker Inserido</string>
    <string name="markercorrectlabel">Marker Inserido</string>
    <string name="marker_texto">Descrição do Problema</string>
    <string name="usernamelabel">Username</string>
    <string name="passwordlabel">Password</string>
    <string name="loginlabel">Login</string>
    <string name="shownoteslabel">Show Local Notes</string>
    <string name="createuserlabel">Criar User</string>
    <string name="logoutlabel">Logout</string>
    <string name="LAT">Latitude</string>
    <string name="LON">Latitude</string>
    <string name="Tipo">Tipo</string>
    <string name="edit_type">Editar o Tipo</string>
    <string name="edit_local">Editar a Local</string>


    <string name="selected_item">Selected item:</string>
    <string-array name="Types">
        <item>Obras</item>
        <item>Acidente</item>
        <item>Outro</item>
    </string-array>
</resources>